--- a/VisualCrypt.Desktop/Views/EncryptedBar.xaml
+++ b/VisualCrypt.Desktop/Views/EncryptedBar.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Column="0"
-                   Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=EncrytedBarText}" />
+                   Text="{Binding Source={x:Static files:FileService.BindableFileInfo}, Path=EncrytedBarText}" />
         <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
             <TextBlock>
                 <Hyperlink Click="Hyperlink_SetPassword_Click">
@@ -44,7 +44,7 @@
                 </Hyperlink>
                 <Run xml:space="preserve" />
                 <Hyperlink Click="Hyperlink_Save_Click"
-                           IsEnabled="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=IsDirty}">
+                           IsEnabled="{Binding Source={x:Static files:FileService.BindableFileInfo}, Path=IsDirty}">
                     <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termSave,Mode=OneWay}" />
                 </Hyperlink>
                 <Run xml:space="preserve" />
