--- a/Windows Desktop/VisualCrypt.Desktop/Views/SettingsDialog.xaml
+++ b/Windows Desktop/VisualCrypt.Desktop/Views/SettingsDialog.xaml
@@ -5,8 +5,7 @@
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
                     xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
-                    xmlns:app="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
-                    xmlns:implementations="clr-namespace:VisualCrypt.Cryptography.Portable.VisualCrypt2.Implementations;assembly=VisualCrypt.Cryptography.Portable"
+                    xmlns:implementations="clr-namespace:VisualCrypt.Cryptography.VisualCrypt2.Implementations;assembly=VisualCrypt.Cryptography"
                     xmlns:language="clr-namespace:VisualCrypt.Language;assembly=VisualCrypt.Language"
                     mc:Ignorable="d"
                     Title="Settings" Height="300" Width="500" WindowStartupLocation="CenterOwner"
