--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/App.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/App.xaml
@@ -3,6 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VisualCrypt.Windows"
-    RequestedTheme="Light">
-
+    RequestedTheme="Light"
+     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    >
+  
 </Application>
+   
