--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/EditorUserControl.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/Controls/EditorUserControl.xaml
@@ -2,13 +2,17 @@
     x:Class="VisualCrypt.Windows.Controls.EditorUserControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VisualCrypt.Windows.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="using:VisualCrypt.Windows"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
+    <d:UserControl.Resources>
+        <ResourceDictionary>
+            <local:DesignTime x:Key="la" />
+        </ResourceDictionary>
+    </d:UserControl.Resources>
     <Grid>
         <TextBox Grid.Row="0" x:Name="_textBox1"  AcceptsReturn="True"></TextBox>
     </Grid>
