--- a/Windows Desktop/VisualCrypt.Desktop/Views/EncryptedBar.xaml
+++ b/Windows Desktop/VisualCrypt.Desktop/Views/EncryptedBar.xaml
@@ -28,7 +28,7 @@
                 </Hyperlink>
                 <Hyperlink Click="Hyperlink_ClearPassword_MouseDown">
                     <TextBlock Padding="0" Margin="0" FontWeight="Normal" FontFamily="WebDings"
-                               Visibility="{Binding Path=PasswordInfo.IsTextBlockClearPasswordHidden, Converter={StaticResource IsHiddenVisibilityConverter}}">
+                               Visibility="{Binding Path=PasswordInfo.IsTextBlockClearPasswordVisible, Converter={StaticResource BoolVisibility}}">
                         r
                     </TextBlock>
                 </Hyperlink>
