--- a/Windows, Windows Mobile 10/VisualCrypt.Windows/App.xaml
+++ b/Windows, Windows Mobile 10/VisualCrypt.Windows/App.xaml
@@ -2,12 +2,17 @@
     x:Class="VisualCrypt.Windows.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VisualCrypt.Windows"
     RequestedTheme="Light"
-     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+    xmlns:valueConverters="using:VisualCrypt.Windows.ValueConverters"
     >
-  
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/InUse/VisualCryptColors.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+            <valueConverters:BoolVisibilityConverter x:Key="BoolVisibility"/>
+            <valueConverters:EnabledToBrushConverter x:Key="EnabledToBrush"/>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
    
